--- a/styles/interests.css
+++ b/styles/interests.css
@@ -7,7 +7,7 @@ body {
 header {
     width: 100%;
     height: 100vh;
-    background: url(/img/interests3.svg) no-repeat;
+    background: url(/img/interests.svg) no-repeat;
     background-size: cover;
     color: #fff;
     display: flex;
@@ -50,21 +50,35 @@ header p {
     border-right: 2px solid #fff;
     animation: blink 0.7s infinite ease;
 }
-
 .description {
-    height: 40vh;
-    width: 100%;
-    color: #E8C600;
+    width: 95%;
+    color: #F1BE59;
     font-size: 38px;
+    margin-left: 5%;
+    text-align: center;
 }
-.box1 {
-    height: 100vh;
-    width: 100%;
+.box {
+    height: 70vh;
+    width: 70%;
     display: flex;
-    background: rgb(79,12,167);
-background: linear-gradient(180deg, rgba(79,12,167,1) 3%, rgba(48,14,133,1) 27%, rgba(18,16,45,1) 84%);
+    align-items: center;
+    margin-left: 15%;
 }
-
+.leftbox {
+    width: 50%;
+    height: 40vh;
+}
+.rightbox {
+    width: 50%;
+    height: 40vh;
+}
+.box img{
+    width: 400px;
+}
+.box .title {
+    font-size: 40px;
+    color: #F1BE59;
+}
 @keyframes blink {
     0% {
         opacity: 0;
