--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
     margin: 0;
     padding: 0;
@@ -6,7 +5,7 @@ body {
     box-sizing: border-box;
 }
 header {
-    background: url(/img/gallery.svg) no-repeat;
+    background: url(/img/) no-repeat;
     background-size: 100%;
     background-position: top left;
     width: 95%;
@@ -93,100 +92,4 @@ img.me-active {
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
-=======
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Titillium', sans-serif;
-    box-sizing: border-box;
-}
-header {
-    background: url(/img/gallery.svg) no-repeat;
-    background-size: 100%;
-    background-position: top left;
-    width: 95%;
-    height: 100vh;
-    color: #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-end;
-    overflow: hidden;
-    padding-right: 5%;
-}
-header p {
-    font-size: 16px;
-    width: 300px;
-    color: #df89b5;
-    text-align: right;
-}
-header h1 {
-    font-size: 44px;
-    margin-top: 20vh;
-}
-header a {
-    color: #000;
-    text-decoration: none;
-    text-align: right;
-    width: 150px;
-    height: 50px;
-}
-.gallery-highlight {
-    width: 80%;
-    height: 50%;
-}
-section {
-    display: flex;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-}
-.description {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #12102D;
-    color: #fff;
-}
-.description h1 {
-    font-size: 40px;
-    margin-bottom: 10px;
-}
-.description img {
-    margin-top: 30px;
-}
-.description a p {
-    text-align: center;
-    font-size: 14px;
-    margin-top: 5px;
-}
-.gallery {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.preview {
-    display: flex;
-    width: 80%;
-}
-.preview img {
-    height: 100px;
-    flex-grow: 1;
-    opacity: 0.7;
-    cursor: pointer;
-    transition: opacity 0.3s ease ;
-}
-img.me-active {
-    opacity: 1;
-}
-@font-face {
-    font-family: Titillium; /* Гарнитура шрифта */
-    src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
->>>>>>> Test commit
 	}
