--- a/styles/books.css
+++ b/styles/books.css
@@ -3,11 +3,11 @@ body {
     padding: 0;
     font-family: 'Titillium', sans-serif;
 }
-.box1 {
+header {
     background: url(/img/books.svg) no-repeat;
     background-size: 100%;
     width: 95%;
-    height: 100vh;
+    height: 80vh;
     color: #000;
     display: flex;
     flex-direction: column;
@@ -16,17 +16,17 @@ body {
     overflow: hidden;
     margin-left: 5%;
 }
-.box1 .back {
+header .back {
     font-size: 24px;
     color: #000;
 }
-.box1 p {
-    font-size: 16px;
+header p {
+    font-size: 20px;
     width: 300px;
-    color: #df89b5;
+    color: #F1BE59;
 }
 
-.box1 h1 {
+header h1 {
     font-size: 44px;
     margin-top: 20vh;
 }
@@ -37,26 +37,24 @@ a {
     width: 150px;
     height: 50px;
 }
-main {
-    background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 80%, #fff 100%);
-}
-.box2 { 
-    width: 100%;
-    color: #df89b5;
+.box { 
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
 }
 .images {
     display: flex;
-    width: 80%;
-    margin-left: 10%;
+    width: 100%;
     justify-content: space-between;
     align-content: center;
     flex-flow: row wrap;
 }
-.box2 h1 {
+.box .title {
     text-align: center;
     width: 100%;
+    color: #F1BE59;
     padding-top: 20px;
-    padding-bottom: 40px;
+    font-size: 44px;
 }
 .fade  {
     width: 200px;
@@ -112,7 +110,13 @@ main {
 .golding::after {
     content: 'Novel, 1954';
 }
-
+.fade:hover::after {
+    opacity: 0.5;
+}
+.box blockquote {
+    font-size: 30px;
+    color: #F1BE59;
+}
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
