Added navigation bar

--- a/styles/books.css
+++ b/styles/books.css
@@ -3,6 +3,58 @@ body {
     padding: 0;
     font-family: 'Titillium', sans-serif;
 }
+nav {
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s;
+    padding: 40px 100px;
+    z-index: 100000;
+}
+nav .logo {
+    position: relative;
+    text-decoration: none;
+    font-size: 28px;
+    transition: 0.6s;
+}
+nav ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5%;
+}
+nav ul li {
+    position: relative;
+    list-style: none;
+}
+nav ul li a {
+    position: relative;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.6s;
+}
+nav.sticky {
+    padding: 5px 100px;
+    background: #fff;
+}
+nav.sticky ul li a {
+    color: #000;
+}
+header .back {
+    font-size: 24px;
+    color: #000;
+}
+header p {
+    font-size: 20px;
+    width: 300px;
+    color: #F1BE59;
+}
 header {
     background: url(/img/books.svg) no-repeat;
     background-size: 100%;
@@ -16,19 +68,14 @@ header {
     overflow: hidden;
     margin-left: 5%;
 }
-header .back {
-    font-size: 24px;
-    color: #000;
-}
 header p {
     font-size: 20px;
     width: 300px;
     color: #F1BE59;
 }
-
 header h1 {
     font-size: 44px;
-    margin-top: 20vh;
+    margin-top: 30vh;
 }
 a {
     color: #000;
