--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -4,36 +4,80 @@ body {
     font-family: 'Titillium', sans-serif;
     box-sizing: border-box;
 }
+nav {
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s;
+    padding: 40px 100px;
+    z-index: 100000;
+}
+nav .logo {
+    position: relative;
+    text-decoration: none;
+    font-size: 28px;
+    transition: 0.6s;
+    color: #000;
+}
+nav ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5%;
+}
+nav ul li {
+    position: relative;
+    list-style: none;
+}
+nav ul li a {
+    position: relative;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.6s;
+}
+nav.sticky {
+    padding: 5px 100px;
+    background: #fff;
+}
+nav.sticky ul li a {
+    color: #000;
+}
+header .back {
+    font-size: 24px;
+    color: #000;
+}
+header p {
+    font-size: 20px;
+    width: 300px;
+    color: #F1BE59;
+}
 header {
-    background: url(/img/) no-repeat;
+    background: url(/img/books.svg) no-repeat;
     background-size: 100%;
-    background-position: top left;
     width: 95%;
-    height: 100vh;
+    height: 80vh;
     color: #000;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: left;
     overflow: hidden;
-    padding-right: 5%;
+    margin-left: 5%;
 }
 header p {
-    font-size: 16px;
+    font-size: 20px;
     width: 300px;
-    color: #df89b5;
-    text-align: right;
+    color: #F1BE59;
 }
 header h1 {
     font-size: 44px;
-    margin-top: 20vh;
-}
-header a {
-    color: #000;
-    text-decoration: none;
-    text-align: right;
-    width: 150px;
-    height: 50px;
+    margin-top: 30vh;
 }
 .gallery-highlight {
     width: 80%;
