--- a/styles/interests.css
+++ b/styles/interests.css
@@ -4,6 +4,51 @@ body {
     box-sizing: border-box;
     font-family: 'Titillium', sans-serif;
 }
+nav {
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s;
+    padding: 40px 100px;
+    z-index: 100000;
+}
+nav .logo {
+    position: relative;
+    text-decoration: none;
+    font-size: 28px;
+    transition: 0.6s;
+    color: #fff;
+}
+nav ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5%;
+}
+nav ul li {
+    position: relative;
+    list-style: none;
+}
+nav ul li a {
+    position: relative;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.6s;
+}
+nav.sticky {
+    padding: 5px 100px;
+    background: #fff;
+}
+nav.sticky .logo,
+nav.sticky ul li a {
+    color: #000;
+}
 header {
     width: 100%;
     height: 100vh;
