--- a/styles/books.css
+++ b/styles/books.css
@@ -4,7 +4,7 @@ body {
     box-sizing: border-box;
     font-family: 'Titillium', sans-serif;
 }
-nav {
+header {
     position: fixed;
     top: 0;
     left:-30px;
@@ -15,13 +15,16 @@ nav {
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
-    z-index: 100000;
+    z-index: 100;
 }
-nav .logo {
+header .logo {
     position: relative;
     text-decoration: none;
     font-size: 28px;
     transition: 0.6s;
+}
+header .burger {
+    display: block;
 }
 nav .nav-links {
     position: relative;
@@ -32,33 +35,30 @@ nav .nav-links {
     height: 100%;
     padding-right: 50px;
 }
-nav ul li {
+.nav-links li {
     position: relative;
     list-style: none;
 }
-nav .hamburger {
-    width: 50%;
-}
-nav ul li a {
+.nav-links li a {
     position: relative;
     margin: 0 15px;
     text-decoration: none;
     color: #fff;
     transition: 0.6s;
 }
-nav.sticky {
+header.sticky {
     height: 10vh;
     background: #fff;
 }
-nav.sticky ul li a {
+header.sticky .nav-links li a {
     color: #000;
 }
-header p {
+.viewbox p {
     font-size: 20px;
     width: 300px;
     color: #F1BE59;
 }
-header {
+.viewbox {
     background: url(/img/books.svg) no-repeat;
     background-size: 100%;
     width: 95%;
@@ -71,12 +71,12 @@ header {
     overflow: hidden;
     margin-left: 5%;
 }
-header p {
+.viewbox p {
     font-size: 20px;
     width: 300px;
     color: #F1BE59;
 }
-header h1 {
+.viewbox h1 {
     font-size: 44px;
     margin-top: 30vh;
 }
@@ -166,6 +166,87 @@ a {
 .box blockquote {
     font-size: 30px;
     color: #F1BE59;
+}
+@media (max-width:768px) {
+    body.lock {
+        overflow: hidden;
+    }
+    .logo {
+        z-index: 1;
+        padding: 0 0 0 20px;
+    }
+    .burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 1;
+        margin: 0 50px 0 0;
+    }
+    .burger span {
+        position: absolute;
+        background-color: #000;
+        left:0;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before,
+    .burger::after {
+        position: absolute;
+        content: '';
+        background-color: #000;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before {
+        top:0;
+    }
+    .burger::after {
+        bottom:0;
+    }
+    .burger.active::before {
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .burger.active::after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .burger.active span {
+        transform: scale(0);
+    }
+    nav {
+        position: fixed;
+        top: -110%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        background-color: #F1BE59;
+        padding: 30px 0 0 0;
+        overflow: auto;
+        transition: all 0.5s ease 0s;
+        justify-content: center;
+    }
+    nav.active {
+        top:0;
+    }
+    .nav-links {
+        flex-direction: column;
+    }
+    header {
+        background-color:#fff;
+        width: 100%;
+        left: 0;
+        height: 10vh;
+    }
 }
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
