--- a/styles/inspiration.css
+++ b/styles/inspiration.css
@@ -1,73 +1,83 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Titillium';
+    box-sizing: border-box;
+    font-family: 'Titillium', sans-serif;
 }
-a {
-    text-decoration: none;
-}
-nav {
+header {
     position: fixed;
     top: 0;
-    left:0;
-    width: 90%;
+    left:-30px;
+    height: 15vh;
+    width: 100%;
+    padding-left: 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
-    padding: 40px 100px;
-    z-index: 100000;
+    z-index: 100;
 }
-nav .logo {
+header .logo {
     position: relative;
     text-decoration: none;
     font-size: 28px;
     transition: 0.6s;
     color: #000;
 }
-nav ul {
+header .burger {
+    display: block;
+}
+nav .nav-links {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    margin-right: 5%;
+    width: 50%;
+    height: 100%;
+    padding-right: 50px;
 }
-nav ul li {
+.nav-links li {
     position: relative;
     list-style: none;
 }
-nav ul li a {
+.nav-links li a {
     position: relative;
     margin: 0 15px;
     text-decoration: none;
     color: #fff;
     transition: 0.6s;
 }
-nav.sticky {
-    padding: 5px 100px;
+header.sticky {
+    height: 10vh;
     background: #fff;
 }
-nav.sticky ul li a {
+header.sticky .nav-links li a {
     color: #000;
 }
-header {
-    background: url("/img/inspiration.svg")  no-repeat;
+.viewbox p {
+    font-size: 20px;
+    width: 300px;
+    color: #F1BE59;
+}
+.viewbox {
+    background: url(/img/inspiration.svg) no-repeat;
     background-size: 100%;
     width: 95%;
-    height: 100vh;
+    height: 80vh;
+    color: #000;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: left;
     overflow: hidden;
     margin-left: 5%;
 }
-header p {
+.viewbox p {
     font-size: 20px;
-    width: 350px;
+    width: 300px;
     color: #F1BE59;
 }
-header h1 {
+.viewbox h1 {
     font-size: 44px;
     margin-top: 30vh;
 }
@@ -80,7 +90,86 @@ header h1 {
 }
 
 
-
+@media (max-width:768px) {
+    body.lock {
+        overflow: hidden;
+    }
+    .logo {
+        z-index: 1;
+        padding: 0 0 0 20px;
+    }
+    .burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 1;
+        margin: 0 50px 0 0;
+    }
+    .burger span {
+        position: absolute;
+        background-color: #000;
+        left:0;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before,
+    .burger::after {
+        position: absolute;
+        content: '';
+        background-color: #000;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before {
+        top:0;
+    }
+    .burger::after {
+        bottom:0;
+    }
+    .burger.active::before {
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .burger.active::after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .burger.active span {
+        transform: scale(0);
+    }
+    nav {
+        position: fixed;
+        top: -110%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        background-color: #F1BE59;
+        padding: 30px 0 0 0;
+        overflow: auto;
+        transition: all 0.5s ease 0s;
+    }
+    nav.active {
+        top:0;
+    }
+    .nav-links {
+        flex-direction: column;
+    }
+    header {
+        background-color:#fff;
+        width: 100%;
+        left: 0;
+        height: 10vh;
+    }
+}
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
