--- a/styles/interests.css
+++ b/styles/interests.css
@@ -4,52 +4,58 @@ body {
     box-sizing: border-box;
     font-family: 'Titillium', sans-serif;
 }
-nav {
+header {
     position: fixed;
     top: 0;
-    left:0;
-    width: 90%;
+    left:-30px;
+    height: 15vh;
+    width: 100%;
+    padding-left: 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
-    padding: 40px 100px;
-    z-index: 100000;
+    z-index: 100;
 }
-nav .logo {
+header .logo {
     position: relative;
     text-decoration: none;
     font-size: 28px;
     transition: 0.6s;
     color: #fff;
 }
-nav ul {
+header .burger {
+    display: block;
+}
+nav .nav-links {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    margin-right: 5%;
+    width: 50%;
+    height: 100%;
+    padding-right: 50px;
 }
-nav ul li {
+nav .nav-links li {
     position: relative;
     list-style: none;
 }
-nav ul li a {
+.nav-links li a {
     position: relative;
     margin: 0 15px;
     text-decoration: none;
     color: #fff;
     transition: 0.6s;
 }
-nav.sticky {
-    padding: 5px 100px;
+header.sticky {
+    height: 10vh;
     background: #fff;
 }
-nav.sticky .logo,
-nav.sticky ul li a {
+header.sticky .logo,
+header.sticky .nav-links li a {
     color: #000;
 }
-header {
+.viewbox {
     width: 100%;
     height: 100vh;
     background: url(/img/interests.svg) no-repeat;
@@ -60,20 +66,19 @@ header {
     justify-content: center;
     align-items: flex-start;
 }
-header a {
+.viewbox a {
     text-decoration: none;
     color: #fff;
     font-size: 24px;
     margin-left: 5%;
 }
-header h1 {
+.viewbox h1 {
     font-size: 44px;
     margin-left: 5%;
     margin-top: 20vh;
 }
-header p {
+.viewbox p {
     text-align: center;
-
 }
 .intro {
     display: flex;
@@ -81,7 +86,6 @@ header p {
     font-size: 36px;
     margin-left: 5%;
 }
-
 .typing {
     margin-left: 10px;
     color: #F1BE59;
@@ -135,6 +139,88 @@ header p {
     }
     100% {
         opacity: 1;
+    }
+}
+@media (max-width:768px) {
+    body.lock {
+        overflow: hidden;
+    }
+    .logo {
+        z-index: 1;
+        padding: 0 0 0 20px;
+        color: #000;
+    }
+    .burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 1;
+        margin: 0 50px 0 0;
+    }
+    .burger span {
+        position: absolute;
+        background-color: #000;
+        left:0;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before,
+    .burger::after {
+        position: absolute;
+        content: '';
+        background-color: #000;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before {
+        top:0;
+    }
+    .burger::after {
+        bottom:0;
+    }
+    .burger.active::before {
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .burger.active::after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .burger.active span {
+        transform: scale(0);
+    }
+    nav {
+        position: fixed;
+        top: -110%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        background-color: #F1BE59;
+        padding: 30px 0 0 0;
+        overflow: auto;
+        transition: all 0.5s ease 0s;
+        justify-content: center;
+    }
+    nav.active {
+        top:0;
+    }
+    .nav-links {
+        flex-direction: column;
+    }
+    header {
+        background-color:#fff;
+        width: 100%;
+        left: 0;
+        height: 10vh;
     }
 }
 @font-face {
