--- a/styles/books.css
+++ b/styles/books.css
@@ -95,8 +95,9 @@ a {
 .images {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: center;
     align-content: center;
+    align-items: center;
     flex-flow: row wrap;
 }
 .box .title {
