--- a/styles/movies.css
+++ b/styles/movies.css
@@ -93,10 +93,10 @@ a {
 }
 .images {
     display: flex;
-    width: 80%;
-    margin-left: 10%;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: center;
     align-content: center;
+    align-items: center;
     flex-flow: row wrap;
 }
 .box .title {
