--- a/styles/movies.css
+++ b/styles/movies.css
@@ -88,7 +88,8 @@ a {
     height: 50px;
 }
 .box { 
-    width: 100%;
+    width: 80%;
+    margin-left: 10%;
     text-align: center;
 }
 .images {
