--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,46 @@ a {
 li { 
 	list-style: none;
 }
+header {
+    position: fixed;
+    top: 0;
+    left:50px;
+    height: 10vh;
+    width: 100%;
+	padding-left: 5%;
+    display: flex;
+    justify-content: space-between;
+	align-items: center;
+    transition: 0.6s;
+    z-index: 100;
+}
+.logo {
+	display: none;
+}
+header .burger {
+    display: block;
+}
+nav .nav-links {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    padding-right: 20px;
+}
+.nav-links li {
+    position: relative;
+    list-style: none;
+}
+.nav-links li a {
+    position: relative;
+    margin: 0 15px;
+	text-decoration: none;
+	padding: 0 10px 0 10px;
+	color: #F1BE59;
+    transition: 0.6s;
+}
 .container
 {
 	position: fixed;
@@ -38,44 +78,166 @@ li {
 }
 #myuni {
 	position: relative;
+	margin-top: 10vh;
 	margin-left: 5vw;
 	width: 340px;
+}
+#planet1:hover::before {
+	content: 'Interests';
+	position: absolute;
+	top:30px;
+	left: 105px;
+	color: #F1BE59;
 }
 #planet1 {
 	position: relative;
 	margin-top: 35vh;
 	margin-left: 5vw;
-	width: 25%;
+	width: 320px;
+}
+#planet2:hover::before {
+	content: 'Books';
+	position: absolute;
+	top:-30px;
+	left: 55px;
+	color: #F1BE59;
 }
 #planet2 {
 	position: relative;
 	margin-top: 33vh;
 	margin-left: 37%;
-	width: 12%;
+	width: 160px;
+}
+#planet3:hover::before {
+	content: 'Inspiration';
+	position: absolute;
+	top:-30px;
+	left: 8px;
+	color: #F1BE59;
 }
 #planet3 {
 	position: relative;
 	margin-top: 55vh;
 	margin-left: 60%;
-	width: 7%;
+	width: 90px;
+}
+#planet4:hover::before {
+	content: 'Movies';
+	position: absolute;
+	top:-30px;
+	left: 30px;
+	color: #F1BE59;
 }
 #planet4 {
 	position: relative;
 	margin-top: 10vh;
 	margin-left: 60%;
-	width: 8%;
+	width: 110px;
+}
+#planet5:hover::before {
+	content: 'About';
+	position: absolute;
+	top:-30px;
+	left: 20px;
+	color: #F1BE59;
 }
 #planet5 {
 	position: relative;
-	margin-top: 2vh;
-	margin-left: 90%;
-	width: 5%;
+	margin-top: 5vh;
+	margin-left: 85%;
+	width: 80px;
 }
 #rocket {
 	position: relative;
 	margin-top: 40vh;
 	margin-left: 80%;
 	width: 300px;
+}
+@media (max-width:768px) {
+    body.lock {
+        overflow: hidden;
+    }
+    .logo {
+		display: block;
+		color: #000;
+        z-index: 1;
+        padding: 0 0 0 20px;
+    }
+    .burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 1;
+        margin: 0 50px 0 0;
+    }
+    .burger span {
+        position: absolute;
+        background-color: #000;
+        left:0;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before,
+    .burger::after {
+        position: absolute;
+        content: '';
+        background-color: #000;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .burger::before {
+        top:0;
+    }
+    .burger::after {
+        bottom:0;
+    }
+    .burger.active::before {
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .burger.active::after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .burger.active span {
+        transform: scale(0);
+    }
+    nav {
+        position: fixed;
+        top: -170%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        background-color: #F1BE59;
+        padding: 30px 0 0 0;
+        overflow: auto;
+        transition: all 0.5s ease 0s;
+        justify-content: center;
+    }
+    nav.active {
+        top:0;
+    }
+    .nav-links {
+		flex-direction: column;
+	}
+	.nav-links li a {
+		color: #fff;
+	}
+    header {
+        background-color:#fff;
+        width: 100%;
+        left: 0;
+        height: 10vh;
+    }
 }
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
