--- a/styles/inspiration.css
+++ b/styles/inspiration.css
@@ -82,8 +82,30 @@ header.sticky .nav-links li a {
     margin-top: 30vh;
 }
 .box {
-    width: 70%;
-    margin-left: 15%;
+    width: 60%;
+    margin-left: 20%;
+}
+.list {
+    padding: 0 0 40px 0;
+}
+.list img {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-self: center;
+}
+.list .title {
+    font-size: 34px;
+    color: #F1BE59;
+    display: flex;
+    justify-content: flex-start;
+}
+.list .title img {
+    padding-left: 10px;
+}
+.list a {
+    text-decoration: none;
+    color: #F1BE59;
 }
 
 @media (max-width:768px) {
