--- a/styles/inspiration.css
+++ b/styles/inspiration.css
@@ -107,8 +107,11 @@ header.sticky .nav-links li a {
     text-decoration: none;
     color: #F1BE59;
 }
-
 @media (max-width:768px) {
+    .viewbox {
+        background-position: left 10vh;
+        background-size: 200%;
+    }
     body.lock {
         overflow: hidden;
     }
@@ -186,6 +189,17 @@ header.sticky .nav-links li a {
         width: 100%;
         left: 0;
         height: 10vh;
+    }
+}
+@media screen and (max-width:768px) and (orientation: landscape) {
+    .viewbox {
+        background-position: left 10vh;
+    }
+    .viewbox h1 {
+        font-size: 34px;
+    }
+    .viewbox p {
+        font-size: 16px;
     }
 }
 @font-face {
