--- a/styles/movies.css
+++ b/styles/movies.css
@@ -184,6 +184,10 @@ a {
     opacity: 0.5;
 }
 @media (max-width:768px) {
+    .viewbox {
+        background-position: -15vh 10vh;
+        background-size: 200%;
+    }
     body.lock {
         overflow: hidden;
     }
@@ -261,6 +265,18 @@ a {
         width: 100%;
         left: 0;
         height: 10vh;
+    }
+}
+@media screen and (max-width:768px) and (orientation: landscape) {
+    .viewbox {
+        background-position: left 10vh;
+        background-size: 100%;
+    }
+    .viewbox h1 {
+        font-size: 34px;
+    }
+    .viewbox p {
+        font-size: 16px;
     }
 }
 @font-face {
