--- a/styles/about.css
+++ b/styles/about.css
@@ -106,6 +106,10 @@ header.sticky .nav-links li a {
     align-self: center;
 }
 @media (max-width:768px) {
+    .viewbox {
+        background-position: -15vh 10vh;
+        background-size: 200%;
+    }
     body.lock {
         overflow: hidden;
     }
@@ -212,6 +216,18 @@ header.sticky .nav-links li a {
         height: 40px;
         margin: 0 5px 0 5px;
         align-self: center;
+    }
+}
+@media screen and (max-width:768px) and (orientation: landscape) {
+    .viewbox {
+        background-position: left 10vh;
+        background-size: 100%;
+    }
+    .viewbox h1 {
+        font-size: 34px;
+    }
+    .viewbox p {
+        font-size: 16px;
     }
 }
 @font-face {
