--- a/styles/interests.css
+++ b/styles/interests.css
@@ -275,4 +275,5 @@ header.sticky .logo, header.sticky .nav-links li a {
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
+    font-display: swap;
 	}
