--- a/styles/movies.css
+++ b/styles/movies.css
@@ -282,4 +282,5 @@ a {
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
+    font-display: swap;
 	}
