--- a/styles/style.css
+++ b/styles/style.css
@@ -258,4 +258,5 @@ nav .nav-links {
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
+    font-display: swap;
 	}
