--- a/styles/inspiration.css
+++ b/styles/inspiration.css
@@ -205,4 +205,5 @@ header.sticky .nav-links li a {
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
     src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
+    font-display: swap;
 	}
