fixed link paths

--- a/styles/inspiration.css
+++ b/styles/inspiration.css
@@ -60,7 +60,7 @@ header.sticky .nav-links li a {
     color: #F1BE59;
 }
 .viewbox {
-    background: url(/img/inspiration.svg) no-repeat;
+    background: url(../img/inspiration.svg) no-repeat;
     background-size: 100%;
     width: 95%;
     height: 80vh;
@@ -189,7 +189,7 @@ header.sticky .nav-links li a {
         width: 100%;
         left: 0;
         height: 10vh;
-    }
+    } 
 }
 @media screen and (max-width:768px) and (orientation: landscape) {
     .viewbox {
@@ -204,6 +204,6 @@ header.sticky .nav-links li a {
 }
 @font-face {
     font-family: Titillium; /* Гарнитура шрифта */
-    src: url(/fonts/titillium.ttf); /* Путь к файлу со шрифтом */
+    src: url(../fonts/titillium.ttf); /* Путь к файлу со шрифтом */
     font-display: swap;
 	}
