--- a/styles/books.css
+++ b/styles/books.css
@@ -57,6 +57,7 @@ header.sticky .nav-links li a {
     font-size: 20px;
     width: 300px;
     color: #F1BE59;
+    z-index: 5;
 }
 .viewbox {
     background: url(../img/books.svg) no-repeat;
@@ -64,21 +65,54 @@ header.sticky .nav-links li a {
     width: 95%;
     height: 80vh;
     color: #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: left;
     overflow: hidden;
     margin-left: 5%;
 }
-.viewbox p {
-    font-size: 20px;
-    width: 300px;
-    color: #F1BE59;
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 .viewbox h1 {
     font-size: 44px;
     margin-top: 30vh;
+    z-index: 5;
+}
+.container
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+#austranate {
+    position: relative;
+	margin-top: 30vh;
+	margin-left: 50vw;
+    width: 350px;
+    z-index: 5;
+}
+#planet1 {
+	position: relative;
+	margin-top: -15vh;
+	margin-left: 45vw;
+	width: 150px;
+}
+#planet2 {
+	position: relative;
+	margin-top: 35vh;
+	margin-left: 40vw;
+	width: 100px;
+}
+#planet3 {
+	position: relative;
+	margin-top: 40vh;
+	margin-left: 80vw;
+	width: 80px;
 }
 a {
     color: #000;
@@ -88,8 +122,8 @@ a {
     height: 50px;
 }
 .box { 
-    width: 80%;
-    margin-left: 10%;
+    width: 70%;
+    margin-left: 15%;
     text-align: center;
 }
 .images {
@@ -108,10 +142,18 @@ a {
     font-size: 44px;
 }
 .fade  {
-    width: 200px;
-    height: 300px;
+    width: 150px;
+    height: 225px;
     margin: 20px 20px;
     position: relative;
+}
+.fade:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 13px 0px rgba(0, 0, 0, 0.5);
+    transition: 0.8s;
+}
+.fade:not(:hover) {
+    transition: 0.8s;
 }
 .fade img {
     width: 100%;
@@ -251,6 +293,16 @@ a {
         width: 100%;
         left: 0;
         height: 10vh;
+    }
+    #planet1 img, #planet2 img, #planet3 img{
+        display: none;
+    }
+    #austranate {
+        position: relative;
+        margin-top: 20vh;
+        margin-left: 30vw;
+        width: 250px;
+        z-index: 2;
     }
 }
 @media screen and (max-width:768px) and (orientation: landscape) {
