--- a/styles/inspiration.css
+++ b/styles/inspiration.css
@@ -60,26 +60,65 @@ header.sticky .nav-links li a {
     color: #F1BE59;
 }
 .viewbox {
-    background: url(../img/inspiration.svg) no-repeat;
+    background: url(../img/books.svg) no-repeat;
     background-size: 100%;
     width: 95%;
     height: 80vh;
     color: #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: left;
     overflow: hidden;
     margin-left: 5%;
+}
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 .viewbox p {
     font-size: 20px;
     width: 300px;
     color: #F1BE59;
+    z-index: 5;
 }
 .viewbox h1 {
     font-size: 44px;
     margin-top: 30vh;
+    z-index: 5;
+}
+.container
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+#austranate {
+    position: relative;
+	margin-top: 30vh;
+	margin-left: 50vw;
+    width: 350px;
+    z-index: 5;
+}
+#planet1 {
+	position: relative;
+	margin-top: -15vh;
+	margin-left: 45vw;
+	width: 150px;
+}
+#planet2 {
+	position: relative;
+	margin-top: 35vh;
+	margin-left: 40vw;
+	width: 100px;
+}
+#planet3 {
+	position: relative;
+	margin-top: 40vh;
+	margin-left: 80vw;
+	width: 80px;
 }
 .box {
     width: 60%;
@@ -190,6 +229,16 @@ header.sticky .nav-links li a {
         left: 0;
         height: 10vh;
     } 
+    #planet1 img, #planet2 img, #planet3 img{
+        display: none;
+    }
+    #austranate {
+        position: relative;
+        margin-top: 20vh;
+        margin-left: 30vw;
+        width: 250px;
+        z-index: 2;
+    }
 }
 @media screen and (max-width:768px) and (orientation: landscape) {
     .viewbox {
