--- a/styles/interests.css
+++ b/styles/interests.css
@@ -4,6 +4,9 @@ body {
     box-sizing: border-box;
     font-family: 'Titillium', sans-serif;
 }
+li { 
+	list-style: none;
+}
 header {
     position: fixed;
     top: 0;
@@ -60,6 +63,9 @@ header.sticky .logo, header.sticky .nav-links li a {
     background: url(../img/interests.svg) no-repeat;
     background-size: cover;
     color: #fff;
+}
+.wrapper {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -91,6 +97,49 @@ header.sticky .logo, header.sticky .nav-links li a {
     height: 37%;
     border-right: 2px solid #fff;
     animation: blink 0.7s infinite ease;
+}
+.container
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+#rocket {
+    position: relative;
+	margin-top: 30vh;
+	margin-left: 45vw;
+	width: 450px;
+}
+#planet1 {
+	position: relative;
+	margin-top: 5vh;
+	margin-left: 45vw;
+	width: 100px;
+}
+#planet2 {
+	position: relative;
+	margin-top: 45vh;
+	margin-left: 80vw;
+	width: 150px;
+}
+#planet3 {
+	position: relative;
+	margin-top: -10vh;
+	margin-left: 78vw;
+	width: 100px;
+}
+#planet4 {
+	position: relative;
+	margin-top: -15vh;
+	margin-left: 55vw;
+	width: 70px;
+}
+.mixBlnd
+{
+	background-blend-mode: screen;
 }
 .description {
     width: 95%;
@@ -228,6 +277,9 @@ header.sticky .logo, header.sticky .nav-links li a {
         left: 15%;
         width: 70%;
         height: 70%;
+    }
+    .container {
+        display: none;
     }
     .intro {
         display: flex;
