--- a/styles/about.css
+++ b/styles/about.css
@@ -144,6 +144,28 @@ header.sticky .nav-links li a {
     margin: 0 5px 0 5px;
     align-self: center;
 }
+  .from-left {
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+  .from-right {
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%);
+  }
+  .from-left,
+  .from-right {
+    transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transition: opacity 250ms ease-in, transform 400ms ease-in,
+      -webkit-transform 400ms ease-in;
+    opacity: 0;
+  }
+  .from-left.appear,
+  .from-right.appear {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
 @media (max-width:768px) {
     .viewbox {
         background-position: -15vh 10vh;
