--- a/styles/books.css
+++ b/styles/books.css
@@ -210,6 +210,27 @@ a {
     font-size: 30px;
     color: #F1BE59;
 }
+.back_to_top {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 9999;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    border: 1px solid;
+    color: #444;
+    cursor: pointer;
+    border-radius: 25px;
+    display: none;
+}
+.back_to_top:hover {
+    border: 2px solid;
+}
+.back_to_top-show {
+    display: block;
+}
 @media (max-width:768px) {
     .viewbox {
         background-position: -15vh 10vh;
